feat: Complete Firebase integration and app enhancement
- Add Firebase authentication and Firestore integration
- Implement real-time donation submission with user tracking
- Add Google Maps integration for pickup location selection
- Create comprehensive donation screens (food, clothes, books)
- Add NGO management system with events and profile pages
- Implement donation reminder and tracking functionality
- Add splash screen with animated logo and branding
- Integrate user authentication with login/signup flows
- Add location services with address resolution
- Create donation history and user profile management
- Update UI/UX with modern design patterns and animations
- Add Firebase configuration and security rules
- Add comprehensive error handling and user feedback

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_rating_bar: ^4.0.0
   url_launcher: ^6.2.5
+  firebase_core: ^3.15.2
+  firebase_database: ^11.0.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.1
 
 
 
@@ -65,3 +69,4 @@ flutter:
     - assets/Images/earth1.png
     - assets/Images/book1.png
     - assets/Images/guidelines.png
+    - assets/Images/logo.png
