--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,13 @@ dependencies:
   url_launcher: ^6.2.5
   firebase_core: ^3.15.2
   firebase_database: ^11.0.0
+  cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.1
   geolocator: ^10.1.0
   permission_handler: ^11.0.1
+  google_maps_flutter: ^2.5.0
+  geocoding: ^3.0.0
+  google_fonts: ^6.1.0
 
 
 
@@ -70,3 +75,4 @@ flutter:
     - assets/Images/book1.png
     - assets/Images/guidelines.png
     - assets/Images/logo.png
+    - assets/Images/google.png
